longhorn-system/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui

spec:
  entryPoints:
    - websecure
  tls:
    secretName: longhorn-tls
  routes:
    - match: Host(`longhorn.trap.jp`)
      middlewares:
        - name: auth-trap-jp-hard
          namespace: auth
      services:
        - kind: Service
          name: longhorn-frontend
          port: 80
          scheme: http
